Revert "Merge branch 'develop' into DOCK-2391/500-errors-fix"
This reverts commit 6d350a1ad1fb4521b1db08b9b7c13cc1d961464f, reversing
changes made to 2cb5ff6632b36e26f296c867b9398ccd56f7a4b7.