@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -40,7 +41,7 @@ public final class FileFormatHelper {
             SortedSet<FileFormat> outputFileFormats = new TreeSet<>();
             SortedSet<SourceFile> sourceFiles = tag.getSourceFiles();
             List<SourceFile> cwlFiles = sourceFiles.stream()
-                    .filter(sourceFile -> sourceFile.getType() == DescriptorLanguage.FileType.DOCKSTORE_CWL).toList();
+                    .filter(sourceFile -> sourceFile.getType() == DescriptorLanguage.FileType.DOCKSTORE_CWL).collect(Collectors.toList());
             cwlFiles.stream().filter(cwlFile -> cwlFile.getContent() != null).forEach(cwlFile -> {
                 inputFileFormats.addAll(cwlHandler.getFileFormats(cwlFile.getContent(), "inputs"));
                 outputFileFormats.addAll(cwlHandler.getFileFormats(cwlFile.getContent(), "outputs"));
@@ -65,7 +66,7 @@ public final class FileFormatHelper {
     public static void updateEntryLevelFileFormats(Entry entry) {
         SortedSet<FileFormat> entrysInputFileFormats = new TreeSet<>();
         SortedSet<FileFormat> entrysOutputFileFormats = new TreeSet<>();
-        entry.getWorkflowVersions().forEach(version -> {
+        entry.getWorkflowVersions().stream().forEach(version -> {
             entrysInputFileFormats.addAll(((Version)version).getInputFileFormats());
             entrysOutputFileFormats.addAll(((Version)version).getOutputFileFormats());
         });
