@@ -70,14 +70,6 @@ import io.openapi.model.OneOfFileWrapperImageType;
 import io.openapi.model.ToolFile;
 import io.openapi.model.ToolVersion;
 import io.swagger.api.impl.ToolsImplCommon;
-import jakarta.validation.constraints.Pattern;
-import jakarta.ws.rs.WebApplicationException;
-import jakarta.ws.rs.container.ContainerRequestContext;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.Response.Status;
-import jakarta.ws.rs.core.SecurityContext;
-import jakarta.ws.rs.core.StreamingOutput;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -94,6 +86,14 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import javax.validation.constraints.Pattern;
+import javax.ws.rs.WebApplicationException;
+import javax.ws.rs.container.ContainerRequestContext;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.Response.Status;
+import javax.ws.rs.core.SecurityContext;
+import javax.ws.rs.core.StreamingOutput;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpStatus;
@@ -559,7 +559,8 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
     @SuppressWarnings("checkstyle:ParameterNumber")
     private Entry<?, ?> filterOldSchool(Entry<?, ?> entry, String descriptorType, String registry, String organization, String name, String toolname,
         String description, String author, Boolean checker) {
-        if (entry instanceof Tool tool) {
+        if (entry instanceof Tool) {
+            Tool tool = (Tool) entry;
             if (registry != null && (tool.getRegistry() == null || !tool.getRegistry().contains(registry))) {
                 return null;
             }
@@ -665,7 +666,8 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
             final Optional<ToolVersion> convertedToolVersion = convertedTool.getVersions().stream()
                 .filter(toolVersion -> toolVersion.getName().equalsIgnoreCase(finalVersionId)).findFirst();
             Optional<? extends Version<?>> entryVersion;
-            if (entry instanceof Tool toolEntry) {
+            if (entry instanceof Tool) {
+                Tool toolEntry = (Tool)entry;
                 entryVersion = toolEntry.getWorkflowVersions().stream().filter(toolVersion -> toolVersion.getName().equalsIgnoreCase(finalVersionId))
                     .findFirst();
             } else {
@@ -781,7 +783,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
     public static List<Checksum> convertToTRSChecksums(final SourceFile sourceFile) {
         List<Checksum> trsChecksums = new ArrayList<>();
         if (sourceFile.getChecksums() != null && !sourceFile.getChecksums().isEmpty()) {
-            sourceFile.getChecksums().forEach(checksum -> {
+            sourceFile.getChecksums().stream().forEach(checksum -> {
                 Checksum trsChecksum = new Checksum();
                 trsChecksum.setType(DESCRIPTOR_FILE_SHA256_TYPE_FOR_TRS);
                 trsChecksum.setChecksum(checksum.getChecksum());
@@ -864,7 +866,8 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
         try {
             versionDAO.enableNameFilter(versionId);
 
-            if (entry instanceof Workflow workflow) {
+            if (entry instanceof Workflow) {
+                Workflow workflow = (Workflow) entry;
                 Set<WorkflowVersion> workflowVersions = workflow.getWorkflowVersions();
                 Optional<WorkflowVersion> first = workflowVersions.stream()
                     .filter(workflowVersion -> workflowVersion.getName().equals(versionId)).findFirst();
@@ -881,7 +884,8 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
                 } else {
                     return Response.noContent().build();
                 }
-            } else if (entry instanceof Tool tool) {
+            } else if (entry instanceof Tool) {
+                Tool tool = (Tool) entry;
                 Set<Tag> versions = tool.getWorkflowVersions();
                 Optional<Tag> first = versions.stream().filter(tag -> tag.getName().equals(versionId)).findFirst();
                 if (first.isPresent()) {
@@ -945,7 +949,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
         // Filters the source files to only show the ones that are possibly relevant to the type (CWL or WDL or NFL)
         final DescriptorLanguage descriptorLanguage = DescriptorLanguage.convertShortStringToEnum(type);
         List<SourceFile> filteredSourceFiles = sourceFiles.stream()
-            .filter(sourceFile -> descriptorLanguage.isRelevantFileType(sourceFile.getType())).toList();
+            .filter(sourceFile -> descriptorLanguage.isRelevantFileType(sourceFile.getType())).collect(Collectors.toList());
 
         final Path path = Paths.get("/" + workingDirectory);
         return filteredSourceFiles.stream().map(file -> {
